# ARTEFACT_Production

./: .gitattributes  .gitignore  AGENTS.md  AI_INTEGRATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_md_rules_addition.patch  CMakeLists.txt  CMakeLists.txt.bak  CMakePresets.json  CODE_AUDIT.md  DEMO_RESULTS.md  EXPERT_HANDOFF.md  HEALTH_REPORT_2025_01_17.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PROTOCOL_V2_SUMMARY.md  MONITORING_REPORT_FOR_CLAUDE_CODE.md  PARAMETER_BINDING_IMPLEMENTATION.md  PROJECT_HEALTH_REPORT.md  README.md  README_QUALITY_SYSTEM.md  Recon.md  SPRINT_COMPLETION_REPORT.md  STATUS.md  TestEnginePreparedness_Standalone.cpp  UI_LAYOUT_GUIDE.md  WORKFLOW_GUIDE.md  YOLO_SPRINT_SUMMARY.md  build-simple.bat  build-standalone.bat  checkpoint.bat  cm.txt  cm_all.txt  compile_and_run_demo.bat  debug-crash-analysis.bat  example_gestures.txt  fix_braces.py  fix_windows_hooks.md  generate-checksum.bat  gestures.txt  (+31 more)
.bmad-core/: install-manifest.yaml
.bmad-core/agents/: build-stability-monitor.yaml  dsp-frequency-oracle.yaml  juce-integration-specialist.yaml  rt-audio-guardian.yaml
.bmad-core/data/: bmad-kb.md
.bmad-core/tasks/: recover-archived-docs.md
.bmad-core/utils/: agent-activator.md
.bmad-core/workflows/: rt-safety-audit.yaml  spectral-validation.yaml
.claude/: #  ENHANCED_INTEGRATION_PROTOCOL.md  fix-report.md  settings.json  settings.local.json  settings.local.json.backup20250821
.claude/_backup/: settings.local.json.20250821-134455.bak
.claude/agents/: README.md  README.md.backup20250821  ci-runner.md  gatekeeper.md  maker-agent.md  reader-agent.md  rt-sentinel.md  secscan.md  stylebot.md
.claude/commands/: agents-propose-niche.md  agents-run.md  checklist.md  config-verify.md  d.md  detect-violations.md  enforce.md  strict-maker.md
.claude/hooks/: notification.py  ntfy-notifier.ps1  pushover-notifier.ps1  smart-lint.ps1  smart-test.ps1
.clinerules/: 99-README.md
.github/: pull_request_template.md
.github/chatmodes/: README.chatmode.md
.github/workflows/: [Verse].txt  ci.yml  gemini-review.yml  the secret sauce is a baked in emu.txt  windows.yml
.qwen/bmad-method/: QWEN.md
.trae/rules/: README.md
.venv[D/: pyvenv.cfg
.venv[D/Scripts/: activate  activate.bat
.windsurf/workflows/: README.md
Assets/fonts/: README.md
Audity Magic/: brainstorming-sesh-ai.md
Source/: CanvasComponent.cpp  CanvasComponent_Legacy.cpp  CanvasPanel.cpp  EMURomplerComponent.h  MainClean.cpp  MainComponent.cpp  MainComponentClean.h  MainComponent_Minimal.cpp  MainComponent_Minimal.h  OfflineRender.cpp  ParamIDs.h  PluginEditor.h  RetroBrutalistLookAndFeel.cpp
Source/Core/: BuildInfo.h  CDPSpectralEngine.cpp  ColorToSpectralMapper.cpp  Commands.h  CrashToggles.h  DebugGlobalQueue.h  EMUFilter.cpp  EMUFilter.h  EMUModulation.h  EMURomplerEngine.cpp  EMUSampleEngine.cpp  GestureSnapshot.h  HarmonicQuantizer.h  LFO.cpp  LFO.h  PaintEngine.h  PaintQueue.h  PluginProcessor.cpp  PluginProcessor.cpp.bak  PluginProcessor.cpp.broken  PluginProcessor.cpp.fixed  PluginProcessor.cpp.orig  PluginProcessor.h  PluginProcessor.h.bak  SampleMaskingEngine.cpp  SampleMaskingEngine.h  SessionManager.cpp  SpectralSynthEngine.cpp  SpectralSynthEngine.h  SpectralSynthEngineStub.cpp
Source/Dev/: AudioTrace.cpp  AudioTrace.h
Source/GUI/: ArtefactLookAndFeel.cpp  ArtefactLookAndFeel.h  AssetRegistry.cpp  AssetRegistry.h  ChordRecognitionOverlay.cpp  ChordRecognitionOverlay.h  Colors.h  ConfigRooms.h  EnhancedExportPod.cpp  EnhancedExportPod.h  EnhancedPianoRollComponent.cpp  EnhancedPianoRollComponent.h  ExportDialog.cpp  ForgePanel.h  HeaderBarComponent.cpp  HeaderBarComponent.h  HudOverlay.h  LayoutOverlay.h  LookAndFeelRetro.cpp  LookAndFeelTokens.h  MusicalFiltersRoom.cpp  MusicalGridOverlay.cpp  MusicalGridOverlay.h  PaintCanvasComponent.cpp.old  PaintCanvasComponent.h.old  PianoRollComponent.cpp  PianoRollComponent.h  PixelCanvasComponent.cpp  PixelCanvasComponent.h  PixelCanvasComponentStub.h  PluginEditor.cpp  PluginEditor.h  PluginEditorMVP.cpp  PluginEditorMVP.h  PluginEditorRetro.h  PluginEditorVector.cpp  PluginEditorVector.h  PluginEditorY2K.cpp  (+14 more)
Tests/: ConstructorOnly.cpp  PaintQueueTests.cpp  SpscRing_Test.cpp  TestCanvasRender.cpp  TestCanvasToSpectral_Preconditions.cpp  TestFrequencyLUT.cpp  TestPaintPerformance.cpp  TestPaintProducesAudio.cpp  TestPluginInitCrashRepro.cpp  TestPluginInitSmoke.cpp  TestRTSafety.cpp  TestRetroFastPath.cpp  TestUIIntegration.cpp
_archive/: CURRENT_MANIFEST.md  INDEX.md
build-mingw/: CMakeCache.txt
build-test/: CMakeCache.txt
docs/: AGENT_ACTIVATION_GUIDE.md  ARCHIVE_POLICY.md  ASSET_GENERATION_SPEC.md  BLUEPRINT_BROWNFIELD.md  EMU_AUDITY_2000_IMPLEMENTATION_SUMMARY.md  NOTIFICATION_SYSTEM.md  PHASE2_UI_IMPLEMENTATION_GUIDE.md  README.md  RECOVERY_PLAN.md  UI_COMPONENTS.md  UI_DESIGN.md  architecture.md  brainstorming-session-results.md  dev-context.md  emu system.txt  mapping-notes.md  ui-phase2-scoped-spec.md
runtime/: CLEAN_REBUILD_REPORT.md  DEVELOPER_HUD_FINAL_VALIDATION_REPORT.md  EMERGENCY_STABILITY_STATUS.md  HOOKS_POST.txt  HUD_FINAL_VALIDATION_SUMMARY.md  HUD_SYSTEM_USER_GUIDE.md  STATUS-MULTICORE-TEMPLATE.md  STATUS.md  VERIFY_ctest_raw.txt  VERIFY_legacy.txt  VERIFY_matrix.txt  VERIFY_slowest.txt  crash-testing-log.md  developer_hud_integration_report.md  developer_hud_validation_report.md  validation_summary.txt
scripts/: ai-handoff-export.bat  build-and-notify.ps1  build-tests.bat  build-tests.sh  create-mega-prompt.bat  detect_duplicates.ps1  generate-checksum-simple.bat  hello-visibility.ps1  hook-wrapper.ps1  manual-checksum.bat  notify-slack.ps1  notify.ps1  print_segment.py  quality-check.bat  rt-lint.bat  run-and-notify.ps1  run-tests.bat  run-tests.sh  setup-quality-system.bat  tdd-guard-notify.ps1  test-and-notify.ps1  validate-ai-context.bat  validate-patch.bat  verify-tdd-guard.sh  watch-tests.sh
tools/: README.md  compare_audio.py  extract_active_files.py  gen_wav.py  generate_continuous_gestures.py  render_and_compare.sh
tools/HostHarness/: CMakeLists.txt  HostHarness.cpp
(+304 files in other folders)
